--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                 </div>
                 <div class="w-8"></div> <!-- Espaço para alinhar o título ao centro -->
             </div>
-            <!-- Barra de Pesquisa -->
             <div class="mt-4">
                 <input type="text" id="search-input" placeholder="Pesquisar notícias..." class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-400 focus:border-transparent">
             </div>
@@ -70,7 +69,6 @@
         document.addEventListener('DOMContentLoaded', () => {
             const googleSheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vShVSJjWn39t_3R1RXw-qcAldFT5bvK0GhTu53KNs-6w5oi-YAgXhq5kwoyaphXaZUzpQsnOwFw_pFb/pub?gid=1365485367&single=true&output=csv';
 
-            // Seletores de elementos
             const newsContainer = document.getElementById('news-container');
             const loadingIndicator = document.getElementById('loading');
             const openSidebarBtn = document.getElementById('open-sidebar-btn');
@@ -84,14 +82,12 @@
             let allNewsItems = [];
             let currentCategoryFilter = null;
 
-            // --- Lógica do Menu Lateral ---
             function openSidebar() { sidebar.classList.remove('-translate-x-full'); overlay.classList.remove('hidden', 'opacity-0'); }
             function closeSidebar() { sidebar.classList.add('-translate-x-full'); overlay.classList.add('opacity-0'); setTimeout(() => overlay.classList.add('hidden'), 300); }
             openSidebarBtn.addEventListener('click', openSidebar);
             closeSidebarBtn.addEventListener('click', closeSidebar);
             overlay.addEventListener('click', closeSidebar);
 
-            // --- Lógica do Botão Voltar ao Topo ---
             window.addEventListener('scroll', () => {
                 if (window.scrollY > 300) {
                     backToTopBtn.classList.remove('opacity-0', 'translate-y-4');
@@ -101,18 +97,13 @@
             });
             backToTopBtn.addEventListener('click', () => window.scrollTo({ top: 0, behavior: 'smooth' }));
 
-            // --- Funções Auxiliares ---
             function displayError(message) { loadingIndicator.classList.add('hidden'); newsContainer.innerHTML = `<p class="text-center text-red-500 col-span-full">${message}</p>`; }
             function parseDate(dateStr) { if (!dateStr) return null; const isoDateStr = dateStr.replace(' ', 'T'); const date = new Date(isoDateStr); return !isNaN(date.getTime()) ? date : null; }
 
-            // --- Função Principal de Renderização ---
             function renderNews() {
                 const searchTerm = searchInput.value.toLowerCase();
-                
-                // 1. Filtra por categoria
                 let filteredNews = currentCategoryFilter ? allNewsItems.filter(item => item.categoria === currentCategoryFilter) : [...allNewsItems];
 
-                // 2. Filtra pelo termo de pesquisa
                 if (searchTerm) {
                     filteredNews = filteredNews.filter(item => 
                         item.titulo.toLowerCase().includes(searchTerm) || 
@@ -144,23 +135,44 @@
                     newsForDay.forEach(item => {
                         const card = document.createElement('div');
                         card.className = 'bg-white rounded-lg shadow-lg overflow-hidden flex flex-col transform hover:scale-105 transition-transform duration-300';
+                        
+                        // Codifica o título e o link para serem usados em URLs
+                        const encodedTitle = encodeURIComponent(item.titulo);
+                        const encodedLink = encodeURIComponent(item.link);
+
                         card.innerHTML = `
-                            <a href="${item.link}" target="_blank" rel="noopener noreferrer" class="block h-full flex flex-col">
+                            <a href="${item.link}" target="_blank" rel="noopener noreferrer" class="block">
                                 <img src="${item.imagem}" alt="Imagem da notícia: ${item.titulo}" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/fce7f3/c026d3?text=Imagem+Indisponível';">
-                                <div class="p-6 flex flex-col flex-grow">
-                                    <span class="inline-block bg-pink-100 text-pink-700 text-xs font-semibold px-2 py-1 rounded-full mb-2 self-start">${item.categoria || 'Geral'}</span>
-                                    <h2 class="text-xl font-bold mb-2">${item.titulo}</h2>
-                                    <p class="text-gray-600 text-sm mb-4 flex-grow">${item.resumo}</p>
-                                    <p class="text-xs text-gray-400 mt-auto">Fonte: ${item.fonte}</p>
-                                </div>
                             </a>
+                            <div class="p-6 flex flex-col flex-grow">
+                                <span class="inline-block bg-pink-100 text-pink-700 text-xs font-semibold px-2 py-1 rounded-full mb-2 self-start">${item.categoria || 'Geral'}</span>
+                                <h2 class="text-xl font-bold mb-2">${item.titulo}</h2>
+                                <p class="text-gray-600 text-sm mb-4 flex-grow">${item.resumo}</p>
+                            </div>
+                            <!-- NOVA SECÇÃO: Botões de Partilha -->
+                            <div class="px-6 py-3 bg-gray-50 border-t flex justify-between items-center">
+                                <p class="text-xs text-gray-500">Fonte: ${item.fonte}</p>
+                                <div class="flex space-x-3">
+                                    <!-- WhatsApp -->
+                                    <a href="https://api.whatsapp.com/send?text=${encodedTitle}%20${encodedLink}" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-green-500">
+                                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.894 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.886-.001 2.267.651 4.383 1.808 6.166l-1.225 4.462 4.574-1.194z"/></svg>
+                                    </a>
+                                    <!-- Facebook -->
+                                    <a href="https://www.facebook.com/sharer/sharer.php?u=${encodedLink}" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-600">
+                                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v2.385z"/></svg>
+                                    </a>
+                                    <!-- Twitter (X) -->
+                                    <a href="https://twitter.com/intent/tweet?url=${encodedLink}&text=${encodedTitle}" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-black">
+                                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24h-6.617l-5.21-6.817-6.044 6.817h-3.308l7.73-8.835-7.995-10.66h6.838l4.774 6.405 5.727-6.405z"/></svg>
+                                    </a>
+                                </div>
+                            </div>
                         `;
                         newsContainer.appendChild(card);
                     });
                 });
             }
 
-            // --- Lógica de Inicialização ---
             searchInput.addEventListener('input', renderNews);
             categoryNav.addEventListener('click', (e) => {
                 e.preventDefault();
