--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <h2 class="font-bold text-lg text-pink-600 dark:text-pink-500">Categorias</h2>
             <button id="close-sidebar-btn" class="text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white">&times;</button>
         </div>
-        <nav id="category-nav" class="p-4 flex-grow"></nav>
+        <!-- CORREÇÃO: Adicionada a classe 'overflow-y-auto' para permitir a rolagem vertical -->
+        <nav id="category-nav" class="p-4 flex-grow overflow-y-auto"></nav>
         <!-- Botão de Notificações -->
         <div class="p-4 border-t border-gray-200 dark:border-gray-700">
             <button id="notifications-btn" class="w-full bg-pink-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-pink-700 transition-colors">
@@ -126,10 +127,8 @@
 
     <script>
         // Regista o Service Worker
-        // CORREÇÃO: Adicionada verificação para não registar em ambientes de teste (como o Canvas)
         if ('serviceWorker' in navigator && !window.location.protocol.startsWith('blob')) {
             window.addEventListener('load', () => {
-                // Usar '/service-worker.js' é mais robusto para o site publicado
                 navigator.serviceWorker.register('/service-worker.js').then(registration => {
                     console.log('ServiceWorker registado com sucesso: ', registration.scope);
                 }, err => {
@@ -173,7 +172,6 @@
                         console.log('Permissão para notificações concedida.');
                         notificationsBtn.textContent = 'Notificações Ativas';
                         notificationsBtn.disabled = true;
-                        // No futuro, aqui é onde enviaríamos a subscrição para o servidor.
                     } else {
                         console.log('Permissão para notificações negada.');
                         notificationsBtn.textContent = 'Notificações Bloqueadas';
@@ -184,7 +182,6 @@
 
             notificationsBtn.addEventListener('click', askForNotificationPermission);
 
-            // Verifica o estado da permissão na carga da página
             if ('Notification' in window) {
                 if (Notification.permission === 'granted') {
                     notificationsBtn.textContent = 'Notificações Ativas';
@@ -194,7 +191,7 @@
                     notificationsBtn.disabled = true;
                 }
             } else {
-                notificationsBtn.style.display = 'none'; // Esconde o botão se o navegador não suportar notificações
+                notificationsBtn.style.display = 'none';
             }
 
             // --- Lógica de Navegação e SEO ---
